--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	height: 100vh;
 	width: 100%;
 	max-width: 500px;
